# cpp-ex-machina

./: .env  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LSTMModel.h  Normalizer.h  nn.h  stock.h
lib/: GeometricBrownianMotion.cpp  LSTMModel.cpp  Normalizer.cpp  stock.cpp
src/: GeometricBrownianMotion.h  curl.cpp  main.cpp
